src/components/status.css
/* ... */
.status .media-container.media-eq3 .media:first-of-type {
  border-radius: var(--media-radius) var(--media-radius-inner)
    var(--media-radius-inner) var(--media-radius);
}
.status .media-container.media-eq3 .media:nth-of-type(2) {
  border-radius: var(--media-radius-inner) var(--media-radius)
    var(--media-radius-inner) var(--media-radius-inner);
}
.status .media-container.media-eq3 .media:last-of-type {
  border-radius: var(--media-radius-inner) var(--media-radius-inner)
    var(--media-radius) var(--media-radius-inner);
}
.status .media-container.media-eq4 .media:first-of-type {
  border-radius: var(--media-radius) var(--media-radius-inner)
    var(--media-radius-inner) var(--media-radius-inner);
}
.status .media-container.media-eq4 .media:nth-of-type(2) {
  border-radius: var(--media-radius-inner) var(--media-radius)
    var(--media-radius-inner) var(--media-radius-inner);
}
.status .media-container.media-eq4 .media:nth-of-type(3) {
  border-radius: var(--media-radius-inner) var(--media-radius-inner)
    var(--media-radius-inner) var(--media-radius);
}
.status .media-container.media-eq4 .media:last-of-type {
  border-radius: var(--media-radius-inner) var(--media-radius-inner)
    var(--media-radius) var(--media-radius-inner);
}
.status .media:only-child {
  grid-area: span 2 / span 2;
}
.status:not(.large) .media:only-child {
  max-width: 480px;
}
.status.large .media-container:not(.media-eq1) .media:only-child {
  display: inline-block;
  min-width: 160px;
  min-height: 160px;
  width: fit-content;
}
.status .media:first-child:nth-last-child(3) {
  grid-area: span 2;
}

.status:not(.large) .media-container.media-gt4 .media:last-child {
  position: relative;
}
.status:not(.large) .media-container.media-gt4 .media:last-child:after {
  content: '4+';
  position: absolute;
  inset: 0;
  display: flex;
  place-content: center;
  place-items: center;
  background-color: var(--bg-faded-blur-color);
}

.status .media:is(:hover, :focus) {
  border-color: var(--outline-hover-color);
}
.status .media:active:not(:has(button:active)) {
  filter: brightness(0.8);
  transform: scale(0.99);
}
.status .media :is(img, video) {
  width: 100%;
  height: 100%;
  object-fit: cover;
  vertical-align: middle;
}
.media {
  cursor: pointer;

  &[data-has-alt] {
    position: relative;

    .alt-badge {
      position: absolute;
      bottom: 8px;
      left: 8px;

      &:before {
        content: '';
        position: absolute;
        inset: -12px;
      }
    }
  }
}
.status .media img:is(:hover, :focus),
a:focus-visible .status .media img {
  animation: position-object 5s ease-in-out 1s 5;
  animation-duration: var(--anim-duration, 5s);
}
body:has(#modal-container .carousel) .status .media img:hover {
  animation: none;
}
.status .media .video-container,
.status .media video {
  width: 100%;
  height: 100%;
  object-fit: scale-down;
  /* border-radius: calc(var(--media-radius) - var(--media-border-width)); */
  border-radius: inherit;
}
.status :is(.media-video, .media-audio, .media-gif) {
  position: relative;
  background-clip: padding-box;
}
:is(.media-video, .media-audio) .media-play {
  pointer-events: none;
  width: 44px;
  height: 44px;
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  color: var(--media-fg-color);
  background-color: var(--media-bg-color);
  box-shadow: inset 0 0 0 2px var(--media-outline-color);
  display: flex;
  place-content: center;
  place-items: center;
  border-radius: 70px;
  transition: transform 0.2s ease-in-out;
}
:is(.media-video, .media-audio):hover:not(:active) .media-play {
  transform: translate(-50%, -50%) scale(1.1);
}
:is(.media-video, .media-audio)[data-formatted-duration]:after {
  font-size: 12px;
  pointer-events: none;
  content: attr(data-formatted-duration);
  position: absolute;
  bottom: 8px;
  right: 8px;
  color: var(--media-fg-color);
  background-color: var(--media-bg-color);
  border: var(--hairline-width) solid var(--media-outline-color);
  border-radius: 4px;
  padding: 0 4px;
}
.media-audio[data-formatted-duration]:after {
  content: '♬ ' attr(data-formatted-duration);
}
.media-gif[data-label]:not(:hover):after {
  font-size: 12px;
  font-weight: bold;
  pointer-events: none;
  content: attr(data-label);
  position: absolute;
  bottom: 8px;
  right: 8px;
  color: var(--media-fg-color);
  background-color: var(--media-bg-color);
  border: var(--hairline-width) solid var(--media-outline-color);
  border-radius: 4px;
  padding: 0 4px;
}
.status .media-gif video {
  object-fit: cover;
  pointer-events: none;
}
.status .media-contain {
  min-width: 160px;
  width: fit-content;
}
.status .media-contain video {
  object-fit: scale-down !important;
}
/* .status .media-audio {
  border: 0;
  min-height: 0;
}
.status .media-audio audio {
  width: 100%;
} */
.media-audio {
  width: 100%;
  height: 100%;
  background-image: radial-gradient(
      circle at center center,
      transparent,
      var(--bg-faded-color)
    ),
    repeating-radial-gradient(
      circle at center center,
      transparent,
      var(--bg-faded-color) 16px
    );
  background-blend-mode: multiply;
}

.status:not(.large) .hashtag-stuffing {
  opacity: 0.75;
  transition: opacity 0.2s ease-in-out;
}
.status:not(.large) .hashtag-stuffing:is(:hover, :focus, :focus-within) {
  opacity: 1;
}
.status:not(.large) .hashtag-stuffing {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;

  /* Convert breaks to spaces */
  br {
    display: none;

    + * {
      margin-left: 1ex;
    }
  }
}
.status:not(.large) .hashtag-stuffing:first-child {
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  white-space: normal;
}
/* ... */

